lunar monstrosity related tweaks